idea-plugin/src/test/resources/testData/highlighting/stringfoo.esc
namespace testData.highlighting

string Foo extends <error descr="Ambiguous type reference">String</error>